best-app-ever/app-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: best-app-ever
  namespace: best-app-ever
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: test
  selector:
    app: best-app-ever
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: best-app-ever
  namespace: best-app-ever
  labels:
    app: best-app-ever
spec:
  replicas: 1
  selector:
    matchLabels:
      app: best-app-ever
  template:
    metadata:
      labels:
        app: best-app-ever
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: best-app-ever
      securityContext:
        {}
      containers:
        - name: my-chart
          securityContext:
            {}
          image: "nginx:alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
